# dige

./: AUTHORS  CMakeLists.txt  README  index.html  style.css
cmake/: FindFFmpeg.cmake
dige/: abstract_texture.cpp  abstract_texture.h  color_picker.cpp  color_picker.h  color_picker.hpp  color_picker_control.cpp  color_picker_control.h  color_picker_control.hpp  dige.h  display.h  displaylist.cpp  displaylist.h  displaylist.hpp  error.h  event_waiter.cpp  event_waiter.h  gl_widget.cpp  gl_widget.h  gl_widget.hpp  image.h  image.hpp  image_view.cpp  image_view.h  internal_texture.h  internal_texture.hpp  is_texture_type.h  keywords.h  layout.cpp  layout.h  named_object.h  need_qapp.cpp  need_qapp.h  panzoom.cpp  panzoom.h  panzoom_control.cpp  panzoom_control.h  panzoom_control.hpp  pause.cpp  pause.h  pause_watcher.h  (+20 more)
dige/event/: all.h  click.cpp  click.h  click_event.cpp  click_event.h  custom_events.h  dblclick.cpp  dblclick.h  event.cpp  event.h  event_queue.cpp  event_queue.h  event_set.cpp  event_set.h  event_waiter.h  event_waiter.hpp  key.cpp  key.h  key_press.cpp  key_press.h  key_release.cpp  key_release.h  keycode.cpp  keycode.h  make_event.cpp  make_event.h  mouse_move.cpp  mouse_move.h  or_event.cpp  or_event.h  wait.h  wait_event.h
dige/shortcuts/: pause_watcher.h  reset_panzoom.cpp  reset_panzoom.h  shortcut_manager.h  shortcut_manager.hpp  shortcuts.cpp  toggle_fullscreen.h
dige/widgets/: all.h  gl_widget.cpp  gl_widget.h  image_view.cpp  image_view.h  image_view.hpp  label.cpp  label.h  push_button.cpp  push_button.h  slider.cpp  slider.h  slider_impl.cpp  slider_impl.h  tracer.cpp  tracer.h  tracer_accu.cpp  tracer_accu.h  tracer_view.cpp  tracer_view.h  widget.h
doc/: Makefile  dige.xml  docbook.xsl  ga.txt  index.html  update-gh-pages.sh
examples/: rgb_image.h
examples/events/: CMakeLists.txt  events.cc  main.cc
examples/hello_world/: CMakeLists.txt  main.cc
examples/random/: CMakeLists.txt  Makefile  main.cc
examples/record_random/: CMakeLists.txt  main.cc
examples/simple_image/: CMakeLists.txt  main.cc
examples/ui_creation/: CMakeLists.txt  ui_creation.cc
examples/widgets/: CMakeLists.txt  widgets.cc
sandbox/milena/: CMakeLists.txt  load.hh  main.cc  main2.cc
sandbox/milena_record/: CMakeLists.txt  load.hh  main.cc
sandbox/sfml-window/: CMakeLists.txt  main.cc
sandbox/sfml_window/: window.h
sandbox/test_textures/: CMakeLists.txt  main.cc
src/: display.h  display.hpp  displaylist.hpp  window.hpp
